# libsnark_hw

./: CMakeLists.txt  README.md
hw/: BigInt.h  CMakeLists.txt  ShortWeierstrassCurve.h  Zp.h  hw.cpp
libsnark/depends/libff/libff/: CMakeLists.txt
libsnark/depends/libfqfft/depends/libff/libff/algebra/scalar_multiplication/: multiexp.hpp  multiexp.tcc
libsnark/depends/libfqfft/libfqfft/: CMakeLists.txt
libsnark/depends/libfqfft/libfqfft/evaluation_domain/domains/: basic_radix2_domain_aux.tcc  hw.h
libsnark/libsnark/knowledge_commitment/: kc_multiexp.hpp  kc_multiexp.tcc
merkle/: CMakeLists.txt  main.cpp
